Raise pat-modal z-index Raise pat-modal ``z-index`` to make sure, it's displayed above anything else, e.g. TinyMCE's toolbar in inline editing mode.

--- a/mockup/patterns/modal/pattern.modal.less
+++ b/mockup/patterns/modal/pattern.modal.less
@@ -1,5 +1,9 @@
 @import "@{mockuplessPath}/base.less";
 
+.plone-modal-wrapper {
+    z-index: 999999 !important; // make sure, modal is on very top.
+}
+
 .plone-modal-loading {
   .plone-progress-bar();
   .progress.active .progress-bar();
